# flask-caching-json

./: CHANGES.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
.github/workflows/: publish.yml  publish_to_pypi.yml  publish_to_testpypi.yml
docs/: api.rst  index.rst
examples/: hello.py
requirements/: dev.txt  docs.txt  tests.txt
src/flask_caching_json/: __init__.py  jinja2ext.py  serialization.py
src/flask_caching_json/backends/: __init__.py  base.py  filesystemcache.py  memcache.py  nullcache.py  rediscache.py  simplecache.py  uwsgicache.py
src/flask_caching_json/contrib/: googlecloudstoragecache.py  uwsgicache.py
tests/: conftest.py  test_backend_cache.py  test_basic_app.py  test_cache.py  test_init.py  test_memoize.py  test_templates.py  test_view.py
