[metadata]
name = Flask-Caching-JSON
version = attr: flask_caching_json.__version__
url = https://github.com/NotoriousPyro/flask-caching-json
project_urls =
    Donate = https://palletsprojects.com/donate
    Documentation = https://flask-caching.readthedocs.io
    Changes = https://github.com/NotoriousPyro/flask-caching-json/releases
    Source Code = https://github.com/NotoriousPyro/flask-caching-json
    Issue Tracker = https://github.com/NotoriousPyro/flask-caching-json/issues
license = BSD
license_files = LICENSE
author = Peter Justin
author_email = peter.justin@outlook.com
maintainer = NotoriousPyro
maintainer_email = pyro@pyronexus.com
description = Adds caching support, defaulting to JSON serialization, to Flask applications.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80

[coverage:run]
branch = True
omit =
    src/flask_caching_json/contrib/*
source =
    flask_caching_json
    tests

[coverage:paths]
source =
    src
    */site-packages

[tool:pytest]
testpaths = tests
